UI-3205: broken layout - Members Portlet - fixed shows more spaces break new line

--- a/webapp/portlet/src/main/webapp/skin/less/uiSpaceMenuPortlet/Style.less
+++ b/webapp/portlet/src/main/webapp/skin/less/uiSpaceMenuPortlet/Style.less
@@ -14,6 +14,7 @@
 
 		> li {
 			padding-bottom: 4px;
+			margin-right:  -1px;
 		}
 
 		> .active {
